--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "migewlito",
   "version": "1.0.0",
   "dependencies": {
-    "vercel-php": "0.7.0"
+    "vercel-php": "0.7.4"
+  },
+  "engines": {
+    "node": "22.x"
   }
 }
